--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
                         <div class="banner__thumb d-flex justify-content-center align-items-center" data-aos="fade-left"
                             data-aos-duration="2000">
-                            <a class="banner__video" href="https://www.youtube.com/embed/BKkc2v8echI"
+                            <a class="banner__video" href="#"
                                 data-rel="lightcase" style="z-index: 999;">
                                 <div class="banner__video-inner">
                                     <img src="https://static.wixstatic.com/media/19821c_f45e22731cbf4d17a6335075477818fa~mv2.png/v1/fill/w_81,h_95,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/Official%20Minecraft%20Partner%20Badge%20Medium.png"
